--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,11 +1,13 @@
-<mat-card>
-  <mat-form-field>
-    <input matInput [(ngModel)]="enteredTitle" type="text">
-  </mat-form-field>
-  <mat-form-field>
-    <textarea matInput rows="6" [(ngModel)]="enteredContent"></textarea>
-  </mat-form-field>
-  <button mat-raised-button color="accent" (click)="onAddPost()">Save Post</button>
-</mat-card>
-
-
+<form (submit)="onAddPost(postForm)" #postForm="ngForm">
+  <mat-card>
+    <mat-form-field>
+      <input  matInput ngModel #title="ngModel" name="title" type="text" required minlength="3" placeholder="Please enter a title">
+      <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
+    </mat-form-field>
+    <mat-form-field>
+      <textarea  matInput #content="ngModel" rows="4" ngModel name="content" required minlength="3" placeholder="Please enter a content"></textarea>
+      <mat-error *ngIf="content.invalid">Please enter a post content</mat-error>
+    </mat-form-field>
+    <button mat-raised-button color="accent" type="submit">Save Post</button>
+  </mat-card>
+</form>
