--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -1,13 +1,16 @@
-<form (submit)="onSavePost(postForm)" #postForm="ngForm">
-  <mat-card>
+<mat-card>
+  <mat-spinner *ngIf="isLoading"></mat-spinner>
+  <form (submit)="onSavePost(postForm)" #postForm="ngForm" *ngIf="!isLoading">
     <mat-form-field>
-      <input  matInput [ngModel]="post?.title" #title="ngModel" name="title" type="text" required minlength="3" placeholder="Please enter a title">
+      <input matInput [ngModel]="post?.title" #title="ngModel" name="title" type="text" required minlength="3"
+        placeholder="Please enter a title">
       <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
     </mat-form-field>
     <mat-form-field>
-      <textarea  matInput #content="ngModel" rows="4" [ngModel]="post?.content" name="content" required minlength="3" placeholder="Please enter a content"></textarea>
+      <textarea matInput #content="ngModel" rows="4" [ngModel]="post?.content" name="content" required minlength="3"
+        placeholder="Please enter a content"></textarea>
       <mat-error *ngIf="content.invalid">Please enter a post content</mat-error>
     </mat-form-field>
     <button mat-raised-button color="accent" type="submit">Save Post</button>
-  </mat-card>
-</form>
+  </form>
+</mat-card>
