--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -8,7 +8,7 @@
     </mat-form-field>
     <div>
       <button mat-stroked-button (click)="filePicker.click()" type="button">Pick Image</button>
-      <input type="file" #filePicker>
+      <input type="file" #filePicker (change)="onImagePicked($event)">
     </div>
     <mat-form-field>
       <textarea matInput rows="4" name="content" formControlName="content"
