--- a/src/app/posts/post-create/post-create.component.css
+++ b/src/app/posts/post-create/post-create.component.css
@@ -15,3 +15,13 @@ mat-spinner{
 input[type="file"]{
   visibility: hidden;
 }
+
+.image-preview{
+  height:5rem;
+  margin: 1rem 0;
+}
+
+.image-preview-img{
+  object-fit: cover;
+  width:100%;
+}
