--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -10,6 +10,9 @@
       <button mat-stroked-button (click)="filePicker.click()" type="button">Pick Image</button>
       <input type="file" #filePicker (change)="onImagePicked($event)">
     </div>
+    <div class="image-preview" *ngIf="imagePreview !== '' && imagePreview && form.get('image').valid">
+      <img [src]="imagePreview" [alt]="form.value.title">
+    </div>
     <mat-form-field>
       <textarea matInput rows="4" name="content" formControlName="content"
         placeholder="Please enter a content"></textarea>
