--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,13 +4,16 @@
   <span class="spacer"></span>
   <ul>
     <li>
-      <a mat-button routerLink="/create" routerLinkActive="mat-accent">New Post</a>
+      <a *ngIf="userIsAuthenticated" mat-button routerLink="/create" routerLinkActive="mat-accent">New Post</a>
     </li>
     <li>
-      <a mat-button routerLink="/login" routerLinkActive="mat-accent">Login</a>
+      <a *ngIf="!userIsAuthenticated" mat-button routerLink="/login" routerLinkActive="mat-accent">Login</a>
     </li>
     <li>
-      <a mat-button routerLink="/signup" routerLinkActive="mat-accent">Signup</a>
+      <a *ngIf="!userIsAuthenticated" mat-button routerLink="/signup" routerLinkActive="mat-accent">Signup</a>
+    </li>
+    <li>
+      <button *ngIf="userIsAuthenticated" mat-button>Logout</button>
     </li>
   </ul>
 </mat-toolbar>
