--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
       <a *ngIf="!userIsAuthenticated" mat-button routerLink="/signup" routerLinkActive="mat-accent">Signup</a>
     </li>
     <li>
-      <button *ngIf="userIsAuthenticated" mat-button>Logout</button>
+      <button *ngIf="userIsAuthenticated" mat-button (click)="onLogout()">Logout</button>
     </li>
   </ul>
 </mat-toolbar>
