--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,10 +7,10 @@
       <a *ngIf="userIsAuthenticated" mat-button routerLink="/create" routerLinkActive="mat-accent">New Post</a>
     </li>
     <li>
-      <a *ngIf="!userIsAuthenticated" mat-button routerLink="/login" routerLinkActive="mat-accent">Login</a>
+      <a *ngIf="!userIsAuthenticated" mat-button routerLink="/auth/login" routerLinkActive="mat-accent">Login</a>
     </li>
     <li>
-      <a *ngIf="!userIsAuthenticated" mat-button routerLink="/signup" routerLinkActive="mat-accent">Signup</a>
+      <a *ngIf="!userIsAuthenticated" mat-button routerLink="/auth/signup" routerLinkActive="mat-accent">Signup</a>
     </li>
     <li>
       <button *ngIf="userIsAuthenticated" mat-button (click)="onLogout()">Logout</button>
